<resources>
    <string name="app_name" translatable="false">My ToDo</string>
    <string name="tasksHeader">Tasks:</string>
    <string name="taskHint">Task</string>
    <string name="subtaskHint">Subtask</string>
    <string name="descriptionHint">description</string>
    <string name="priorityButton">Priority</string>
    <string name="unChangeCategory">No category</string>
    <string name="unChangeDeadline">Today</string>
    <string name="addButton">Add</string>
    <string name="updateButton">Update</string>
    <string name="current_locale">default</string>
    <string name="main_settings_menu_description">main settings menu</string>
    <string name="add_subtasks_button">Add Subtasks</string>
    <string name="no_tasks_description">But you can always find them!</string>
    <string name="no_tasks_icon_description" translatable="false">no_tasks_icon</string>
    <string name="no_tasks_header">You have no tasks right now :(</string>
    <string name="category_icon" translatable="false">category_icon</string>
    <string name="priority_icon" translatable="false">priority_icon</string>
    <string name="error_item">Oops… Apparently there was a display error, the developer will fix it soon!</string>
    <string name="create_task_helper">You can create a task by clicking on the plus button at the bottom ッ</string>
    <string name="category_menu">Category? 🤨</string>
    <string name="category_hint">Category</string>
    <string name="color_button">Color</string>
    <string name="priority_1" translatable="false">P1</string>
    <string name="priority_2" translatable="false">P2</string>
    <string name="priority_3" translatable="false">P3</string>
    <string name="priority_4" translatable="false">P4</string>
    <string name="priority_5" translatable="false">P5</string>
    <string name="back_button">Back? 🤨</string>
    <string name="cateories_list">Cateories:</string>
    <string name="sort_by_menu">Sort by:</string>
    <string name="no_sorted_menu">No sorted</string>
    <string name="priority_menu">Priority</string>
</resources>