<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/category_menu" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/sort_by_menu"
        android:visible="false">
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <item
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/no_sorted_menu" />
            <item
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/priority_menu" />
            <item
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/category_menu" />
        </menu>
    </item>
</menu>