<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/P1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/priority_1"
            android:padding="12dp"
            android:text="@string/priority_1"
            android:textColor="?android:textColorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/P2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/priority_2"
            android:padding="12dp"
            android:text="@string/priority_2"
            android:textColor="?android:textColorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/P3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/priority_3"
            android:padding="12dp"
            android:text="@string/priority_3"
            android:textColor="?android:textColorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/P4Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/priority_4"
            android:padding="12dp"
            android:text="@string/priority_4"
            android:textColor="?android:textColorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/P5Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/priority_5"
            android:padding="12dp"
            android:text="@string/priority_5"
            android:textColor="?android:textColorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>