<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/TitleTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/taskHint"
            android:ems="10"
            android:hint="@string/taskHint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/DescriptionTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints="@string/descriptionHint"
            android:ems="10"
            android:hint="@string/descriptionHint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/PriorityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/priority_3"
                    android:text="@string/priorityButton"
                    android:textColor="?android:textColorPrimary" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/CategoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/category_icon"
                    android:text="@string/unChangeCategory"
                    android:textColor="?android:textColorPrimary" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/DeadlineButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unChangeDeadline"
                    android:textColor="?android:textColorPrimary" />
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/UpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/updateButton"
            android:textColor="?android:textColorPrimary" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SubtasksList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="300dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>