<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/TitleTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/taskHint"
            android:ems="10"
            android:hint="@string/taskHint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/DescriptionTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/descriptionHint"
            android:hint="@string/descriptionHint"
            android:inputType="text"
            android:minWidth="256dp"
            android:minHeight="48dp"
            android:textColorHint="@color/hint"
            android:textSize="14sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="4dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/PriorityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue_dark"
                    android:paddingHorizontal="16dp"
                    android:text="@string/priorityButton"
                    android:textColor="@color/white"
                    app:icon="@drawable/priority_3"
                    app:iconGravity="start"
                    app:iconTint="#FFFFFF" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/CategoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue_dark"
                    android:paddingHorizontal="16dp"
                    android:text="@string/unChangeCategory"
                    android:textColor="@color/white"
                    app:icon="@drawable/category_icon"
                    app:iconGravity="start"
                    app:iconTint="#FFFFFF" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/DeadlineButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue_dark"
                    android:paddingHorizontal="16dp"
                    android:text="@string/unChangeDeadline"
                    android:textColor="@color/white" />
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/AddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue_dark"
            android:paddingHorizontal="16dp"
            android:text="@string/addButton"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>